# candlewick-research

./: .gitignore  Cargo.toml
crates/ai/: Cargo.toml
crates/ai/src/: error.rs  ext.rs  lib.rs
crates/ai/src/providers/: claude.rs  digitalocean.rs  gpt.rs  mod.rs  ollama.rs  provider.rs
crates/finage/: Cargo.toml
crates/finage/src/: cli.rs  client.rs  error.rs  format.rs  main.rs  models.rs  ws.rs
crates/finnhub/: Cargo.toml
crates/finnhub/src/: cli.rs  client.rs  error.rs  format.rs  main.rs  models.rs  ws.rs
crates/market/: Cargo.toml
crates/market/src/: aggregator.rs  error.rs  ext.rs  lib.rs  main.rs  types.rs
crates/market/src/providers/: massive.rs  mod.rs  provider.rs  tiingo.rs
crates/massive/: Cargo.toml
crates/massive/src/: cli.rs  client.rs  error.rs  format.rs  main.rs  models.rs  ws.rs
crates/tiingo/: Cargo.toml
crates/tiingo/src/: cli.rs  client.rs  error.rs  format.rs  main.rs  models.rs  ws.rs
