[package]
name = "market"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
chrono = "0.4"
serde_json = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
smol_str = { version = "0.3.6", features = ["serde"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
