[package]
name = "tiingo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
futures-util = "0.3"
rustls = "0.23"
rustls-native-certs = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
wiremock = "0.6"
serde_json = "1"
